--- a/LiteTube/Themes/PlayerMobileTheme.xaml
+++ b/LiteTube/Themes/PlayerMobileTheme.xaml
@@ -703,10 +703,24 @@
                                     </Storyboard>
                                 </VisualState>
                             </VisualStateGroup>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal"/>
+                                <VisualState x:Name="MouseOver"/>
+                                <VisualState x:Name="Pressed"/>
+                                <VisualState x:Name="Disabled">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="TextBlock" 
+                                                                       Storyboard.TargetProperty="Foreground">
+                                            <DiscreteObjectKeyFrame KeyTime="0" 
+                                                                    Value="{StaticResource PhoneDisabledColor}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
                         <Border Name="BackgroundSquare">
                             <TextBlock Text="{Binding QualityName}"
-                                       Name="text"
+                                       Name="TextBlock"
                                        Margin="6,1,6,4"/>
                         </Border>
                     </Border>
