--- a/LiteTube/Themes/PlayerMobileTheme.xaml
+++ b/LiteTube/Themes/PlayerMobileTheme.xaml
@@ -1092,10 +1092,11 @@
 
             <!--Related listbox-->
             <Border Grid.Column="0"
-                     Grid.Row="0"
-                     Grid.RowSpan="3"
-                     HorizontalAlignment="Right"
-                    DataContext="{TemplateBinding ViewModel}">
+                    Grid.Row="0"
+                    Grid.RowSpan="3"
+                    HorizontalAlignment="Right"
+                    DataContext="{TemplateBinding ViewModel}"
+                    Visibility="{Binding MediaPlayer.IsRelatedItemsVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <Border.RenderTransform>
                     <TranslateTransform x:Name="RelatedVideosMover" 
                                         X="{Binding MediaPlayer.IsRelatedItemsVisible, Converter={StaticResource RelatedVideoMarginConverter}}"/>
