--- a/LiteTube/Themes/generic.xaml
+++ b/LiteTube/Themes/generic.xaml
@@ -29,7 +29,7 @@
     <Style x:Key="PageThemeStyle" TargetType="phone:PhoneApplicationPage">
         <Setter Property="shell:SystemTray.BackgroundColor" Value="{StaticResource NavigationPanelColor}" />
         <Setter Property="Background" Value="{StaticResource PhoneBackgroundBrush}"/>
-        <Setter Property="toolkit:TransitionService.NavigationInTransition">
+        <!--<Setter Property="toolkit:TransitionService.NavigationInTransition">
             <Setter.Value>
                 <toolkit:NavigationInTransition>
                     <toolkit:NavigationInTransition.Backward>
@@ -52,7 +52,7 @@
                     </toolkit:NavigationOutTransition.Forward>
                 </toolkit:NavigationOutTransition>
             </Setter.Value>
-        </Setter>
+        </Setter>-->
     </Style>
 
     <Style x:Key="SectionTextBlockStyle" TargetType="TextBlock">
