--- a/LiteTube/Controls/ProfileSections.xaml
+++ b/LiteTube/Controls/ProfileSections.xaml
@@ -181,6 +181,20 @@
                 </StackPanel>
             </ListBoxItem>
 
+            <ListBoxItem common:ItemClickCommand.Command="{Binding UploadedCommand}"
+                          Visibility="{Binding IsAuthorized, Converter={StaticResource BooleanToVisibilityConverter}}"
+                          Margin="0,0,0,10">
+                <StackPanel Orientation="Horizontal" 
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center">
+                    <ContentPresenter ContentTemplate="{StaticResource UploadedIcon}"
+                                      HorizontalAlignment="Left" />
+                    <TextBlock  Text="{Binding Path=LocalizedResources.Uploaded, Source={StaticResource LocalizedStrings}}"
+                               x:Uid=" Uploaded"
+                               Style="{StaticResource SectionTextBlockStyle}" />
+                </StackPanel>
+            </ListBoxItem>
+            
             <ListBoxItem common:ItemClickCommand.Command="{Binding HistoryCommand}"
                           Visibility="{Binding IsAuthorized, Converter={StaticResource BooleanToVisibilityConverter}}"
                           Margin="0,0,0,10">
