--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -124,11 +124,11 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
-                        <TextBlock Text="Рекламная запись" 
-                                   Style="{StaticResource PhoneTextNormalStyle}" 
-                                   Margin="5"
-                                   HorizontalAlignment="Left"
-                                   Grid.Row="0"/>
+                            <TextBlock Text="{Binding Path=LocalizedResources.AdvertisingPost, Source={StaticResource LocalizedStrings}}"
+                                       Style="{StaticResource PhoneTextNormalStyle}" 
+                                       Margin="5"
+                                       HorizontalAlignment="Left"
+                                       Grid.Row="0"/>
                         <!--<adv1:AdMediatorControl x:Name="AdMediator_F3EEB8" 
                                         HorizontalAlignment="Stretch" 
                                         Height="50" 
@@ -152,7 +152,7 @@
                                        Width="480"
                                        Margin="-20,5,0,0"
                                        Grid.Row="1"/>
-                    </Grid>
+                        </Grid>
                     </Border>
                 </DataTemplate>
             </local:ListBoxTemplateSelector.Adv>
